--- a/exercicio/templates/index.html
+++ b/exercicio/templates/index.html
@@ -2,6 +2,24 @@
 <html lang="pt">
     <meta charset="UTF-8" />
     <title>Validar Formulario</title>
+    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+    <style>
+        body {
+            background-color: #f0f0f0;
+        }
+
+        .container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            flex-direction: column;
+            }
+            button[type="submit"]:hover{
+                background-color: #0056b3;
+            }
+    </style>    
+
     <body>
         <div class="container">
             <h1>Validar Formulario</h1>
@@ -39,14 +57,37 @@
 
                     <label for="pais">Pais</label>
                     <input type="text" id="pais" name="pais" required />
-
+                    <div class="g-recaptcha" data-sitekey={{site_key}}></div>
+                    </br>
                     <button type="submit">Enviar</button>
             </form>
 
+                    </div>
+            <div id="popup" class="popup">
+                <span id="popup"></span>
             </div>
-        </div>
+        <script> 
+            var messagem = "{{mensagem}}"
+            var status = "{{status}}"
 
-       
+            function displayPopup (){
+                var popup = document.getElementById("popup")
+                var popupMensagem  = document.getElementById("popupMensagem")
+
+                popupMensagem.textContent = mensagem
+                popupMensagem.className = "popup" + status
+                popupMensagem.style.display = "block"
+                
+                SetTimeout(function(){
+                    popup.style.display = "none";
+                }, 5000);
+            }
+
+            window.onload = function (){
+                if (mensagem !== ""){
+                    displayPopup(mensagem, status);
+            }
+        </script>    
     </body>
 </html>
 
