--- a/exercicio/index.css
+++ b/exercicio/index.css
@@ -17,10 +17,36 @@ body {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
+.popup {
+    display: none;
+    position: fixed;
+    top:50%;
+    left:50%;
+    transform: translate(-50%, -50%);
+    padding: 20px;
+    border-radius: 5px;
+    font-size: 10px;
+    z-index: 1000;
+}
+
+.sucess {
+    background-color: #4caf50;
+    color: #000;
+}
+
+.error {
+    background-color: #f44336;
+    color: #000;
+}
+
 button[type="submit"] {
     background-color: #007bff;
     color: #fff;
     border: none;
     border-radius: 5px;
-    padding: 10px 20px 
+    padding: 10px 20px;
+    cursor: pointer; 
+}
+button[type="submit"]:hover{
+    background-color: #0056b3;
 }
